Fixing popup partly covering the full style control bar.

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -1031,6 +1031,7 @@
 /* Mailchimp integration, todo: check! */
 .flowplayer .fv_player_popup p{margin:0 12px 6px;line-height:1.35}
 .flowplayer .wpfp_custom_popup{width:100%;top:0;bottom:0;margin-bottom:2.4em;-webkit-transition:all .2s;-moz-transition:all .2s;transition:all .2s}
+.flowplayer.fp-full .wpfp_custom_popup{margin-bottom:2.8em}
 .flowplayer .fv_player_popup {background-color:#222;position:relative;top:0;width:100%;height:100%;padding:2em 0 1%}
 .flowplayer .fv_player_popup h1,.flowplayer .fv_player_popup h2,.flowplayer .fv_player_popup h3,.flowplayer .fv_player_popup h4,.flowplayer .fv_player_popup h5,.flowplayer .fv_player_popup h6{margin:0 0 6px !important}
 .mailchimp-form input{width:31.33333333%;max-width:31.33333333%;margin:0 1%}
